# dzip

./: .gitignore  AUTHORS  COPYING  ChangeLog  DzipGui.txt  Makefile.am  README  autogen.sh  configure.ac  dzip.1  dzip.1.in  dzip.pc.in  dzip.txt
debian/: changelog  control  copyright  dzip-static.docs  dzip-static.install  dzip-static.manpages  dzip.manpages  libdzip-dev.install  libdzip0.install  rules
source/: Makefile.am  conmain-lib.c  conmain.c  crc32.c  decode.c  delete.c  dzip-zconf.h  dzip.h  dzipcon.h  encode.c  uncompress.c
source/include/: dzip-zlib.h  dzip.h  dzipcon.h
source/zlib/: inftrees.c  infutil.c  infutil.h  zconf.h  zlib.h
