AM_CFLAGS = -m32 -Wall -Wno-unused-result

bin_PROGRAMS = dzip

dzip_SOURCES = \
	main.c \
	compress.c \
	uncompress.c \
	list.c \
	crc32.c \
	encode.c \
	decode.c \
	v1code.c \
	conmain.c \
	delete.c \
	zlib/adler32.c \
	zlib/deflate.c \
	zlib/trees.c \
	zlib/inflate.c \
	zlib/infblock.c \
	zlib/inftrees.c \
	zlib/infcodes.c \
	zlib/infutil.c \
	zlib/inffast.c

